# stock-platform

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
backend/: download_top50.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: backtests.py  data_mgmt.py  health.py  simulation.py  strategies.py  strategy_types.py
backend/app/core/: backtest_engine.py  indicators.py  portfolio.py  strategy_base.py  walk_forward.py
backend/app/data/: __init__.py  downloader.py  fetcher.py  store.py
backend/app/models/: __init__.py  backtest.py  schemas.py  strategy.py
backend/app/paper_trade/: __init__.py  api.py  bridge.py  engine.py
backend/app/routers/: backtest.py
backend/app/services/: backtest_service.py  daily_simulation.py
backend/app/strategies/: __init__.py  bollinger_breakout.py  composite.py  dual_ma.py  factor_score.py  kdj.py  macd.py  mean_reversion.py  momentum.py  registry.py  turtle.py
backend/data/parquet/: 000001.parquet  000002.parquet  000063.parquet  000157.parquet  000333.parquet  000338.parquet  000538.parquet  000568.parquet  000596.parquet  000651.parquet  000725.parquet  000799.parquet  000858.parquet  002007.parquet  002008.parquet  (+54 more)
backend/tests/: conftest.py  test_backtest.py  test_backtest_api.py  test_backtest_engine.py  test_bridge.py  test_data.py  test_health.py  test_new_strategies.py  test_paper_trade.py  test_portfolio.py  test_strategy_api.py  test_strategy_factor.py  test_strategy_mean_reversion.py  test_strategy_momentum.py  test_walk_forward.py
(+30 files in other folders)
